Updated website code and content

--- a/menu.css
+++ b/menu.css
@@ -314,7 +314,7 @@ body {
   font-size: 26px;
   font-weight: 400;
   color: #f4a623; /* warm orange like image */
-  font-family: "Pacifico", cursive; /* handwritten feel */
+  font-family:  cursive; /* handwritten feel */
   letter-spacing: 1px;
 }
 /* =====================================
@@ -327,7 +327,7 @@ body {
   font-weight: 500;
   max-width: 900px;
 
-  font-family: "Playfair Display", serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* =====================================
