--- a/location.css
+++ b/location.css
@@ -310,7 +310,7 @@ body {
   font-size: 26px;
   font-weight: 400;
   color: #f4a623; /* warm orange like image */
-  font-family: "Pacifico", cursive; /* handwritten feel */
+  font-family:  cursive; 
   letter-spacing: 1px;
 }
 
@@ -324,7 +324,7 @@ body {
   font-weight: 500;
   max-width: 900px;
 
-  font-family: "Playfair Display", serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 /* =====================================
@@ -350,7 +350,7 @@ body {
   transition: all 0.3s ease;
 }
 
-/* ✅ UPDATED HOVER EFFECT */
+/* ✅ HOVER EFFECT */
 .hero-btn:hover {
   background: #e6dccb;        /* light premium beige */
   border-color: #0b2d1f;      /* dark green border */
@@ -358,12 +358,6 @@ body {
   transform: translateY(-2px);
 }
 
-/* =====================================
-   CHILI ICON
-===================================== */
-.hero-btn .chili {
-  font-size: 18px;
-}
 
 /* =====================================
    TABLET RESPONSIVENESS
