--- a/style.css
+++ b/style.css
@@ -315,8 +315,8 @@ body {
 .hero-tagline {
   font-size: 26px;
   font-weight: 400;
-  color: #f4a623; /* warm orange like image */
-  font-family: "Pacifico", cursive; /* handwritten feel */
+  color: #f4a623; 
+  font-family: cursive; 
   letter-spacing: 1px;
 }
 
@@ -330,7 +330,7 @@ body {
   font-weight: 500;
   max-width: 900px;
 
-  font-family: "Playfair Display", serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 /* =====================================
@@ -356,19 +356,12 @@ body {
   transition: all 0.3s ease;
 }
 
-/* ✅ UPDATED HOVER EFFECT */
+/* ✅ HOVER EFFECT */
 .hero-btn:hover {
   background: #e6dccb;        /* light premium beige */
   border-color: #0b2d1f;      /* dark green border */
   color: #0b2d1f;             /* dark green text */
   transform: translateY(-2px);
-}
-
-/* =====================================
-   CHILI ICON
-===================================== */
-.hero-btn .chili {
-  font-size: 18px;
 }
 
 /* =====================================
@@ -433,7 +426,7 @@ body {
   background-position: center;     
   background-repeat: no-repeat;
 
-  padding: 120px 20px;             /* spacing instead of margins */
+  padding: 120px 20px;            
 }
 
 /* =====================================
@@ -473,9 +466,9 @@ body {
    HEADING
 ------------------------------------- */
 .experience-left h2 {
-  font-family: "Playfair Display", serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 52px;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 1.2;
   margin-bottom: 28px;
   color: #ffffff;
@@ -667,7 +660,7 @@ body {
    MAIN HEADING
 ===================================== */
 .menu-content h2 {
-  font-family: "Playfair Display", serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 64px;
   font-weight: 500;
   letter-spacing: 2px;
@@ -763,7 +756,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
 
-  overflow: hidden; /* prevents white space & image overflow */
+  overflow: hidden; 
 }
 
 
@@ -792,7 +785,7 @@ body {
    HEADING
 ------------------------------------- */
 .pisco-left h2 {
-  font-family: "Playfair Display", serif;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 52px;
   font-weight: 500;
   line-height: 1.2;
